# DifferentialLab

./: .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  THIRD_PARTY_LICENSES.md  install.bat  install.sh  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
docs/: Makefile  architecture.md  changelog.md  complex-problems.md  conf.py  configuration.md  developer-guide.md  faq.md  getting-started.md  index.md  make.bat  testing.md  user-guide.md
docs/_static/: .gitkeep
docs/api/: complex_problems.rst  config.rst  frontend.rst  index.md  main_program.rst  pipeline.rst  plotting.rst  solver.rst  transforms.rst  utils.rst
scripts/: clean.bat  clean.sh
src/: __init__.py  main_program.py  pipeline.py
src/complex_problems/: __init__.py  base.py  complex_problems_dialog.py  problem_docs.py  problem_registry.py
src/config/: __init__.py  constants.py  difference_equations.py  env.py  equations.py  equations.yaml  paths.py  theme.py
src/frontend/: __init__.py  plot_embed.py  theme.py  ui_main_menu.py  window_utils.py
src/plotting/: __init__.py  plot_utils.py
src/solver/: __init__.py  difference_solver.py  equation_parser.py  error_metrics.py  notation.py  ode_solver.py  pde_solver.py  predefined.py  statistics.py  validators.py
src/transforms/: __init__.py  function_parser.py  transform_engine.py
src/utils/: __init__.py  exceptions.py  export.py  expression_parser_shared.py  logger.py  update_checker.py
tests/: conftest.py  test_aerodynamics_2d_solver.py  test_antenna_radiation_solver.py  test_complex_problem_docs.py  test_complex_problems_registry.py  test_coupled_oscillators_model.py  test_difference_solver.py  test_equation_parser.py  test_error_metrics.py  test_membrane_2d_solver.py  test_membrane_2d_ui.py  test_nonlinear_waves_solver.py  test_notation.py  test_ode_solver.py  test_pde_solver.py  test_pipe_flow_solver.py  test_pipeline.py  test_predefined.py  test_schrodinger_td_solver.py  test_statistics.py  test_validators.py
tests/config/: test_env.py  test_paths.py
tests/frontend/: test_theme.py
tests/transforms/: test_function_parser.py  test_transform_engine.py
tests/utils/: test_exceptions.py  (+2 more)
(+63 files in other folders)
